--- a/BankingSystem/src/main/resources/templates/admin-system.html
+++ b/BankingSystem/src/main/resources/templates/admin-system.html
@@ -1,19 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
+
 <head>
     <meta charset="UTF-8">
     <title>Administrator System</title>
+    <link href="/style.css" rel="stylesheet">
+    <style>
+        body {
+            background-image: url("index-background.webp");
+        }
+    </style>
 </head>
+
+
 <body>
-<h1> This is the administrator system </h1>
+<div class="container">
 
-<form action="/all-users" method="get">
-    <button type="submit">All Active Users</button>
-</form>
+    <h1> This is the administrator system </h1>
+    <div class="button-container">
+        <form action="/all-users" method="get">
+            <button type="submit">All Active Users</button>
+        </form>
+        <form action="remove-user" method="get">
+            <button type="submit">Remove System User</button>
+        </form>
+    </div>
 
-<form action="remove-user" method="get">
-    <button type="submit">Remove System User</button>
-</form>
+    <br>
+    <br>
 
+    <div class="button-container">
+        <a style="" th:href="@{/}">Home Page</a>
+    </div>
+
+</div>
 </body>
 </html>
