--- a/BankingSystem/src/main/resources/templates/show-customers-accounts.html
+++ b/BankingSystem/src/main/resources/templates/show-customers-accounts.html
@@ -2,44 +2,61 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link href="/style.css" rel="stylesheet">
     <title>Customers Accounts</title>
     <style>
-        table, th, td {
-            border: 1px solid black;
+        table {
             border-collapse: collapse;
+            width: 100%;
         }
 
         th, td {
-            padding: 10px;
+            text-align: left;
+            padding: 8px;
+        }
+
+        th {
+            background-color: #ddd;
+            color: black;
+        }
+
+        tr:nth-child(even) {
+            background-color: #f2f2f2;
+        }
+
+        table {
+            font-size: large;
         }
     </style>
 </head>
 <body>
-<h1>Customers Accounts</h1>
-<table>
-    <thead>
-    <tr>
-        <th>Name</th>
-        <th>Phone</th>
-        <th>Address</th>
-        <th>Account Balance</th>
-        <th>ID</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr th:each="customer : ${customers}">
-        <td th:text="${customer.getString('name')}"></td>
-        <td th:text="${customer.getString('phone')}"></td>
-        <td th:text="${customer.getString('address')}"></td>
-        <td th:text="${customer.get('accountBalance')}"></td>
-        <td th:text="${customer.get('_id')}"></td>
-    </tr>
-    </tbody>
-</table>
+<div class="container">
+    <h1>Customers Accounts</h1>
+    <table>
+        <thead>
+        <tr>
+            <th>Name</th>
+            <th>Phone</th>
+            <th>Address</th>
+            <th>Account Balance</th>
+            <th>ID</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="customer : ${customers}">
+            <td th:text="${customer.getString('name')}"></td>
+            <td th:text="${customer.getString('phone')}"></td>
+            <td th:text="${customer.getString('address')}"></td>
+            <td th:text="${customer.get('accountBalance')}"></td>
+            <td th:text="${customer.get('_id')}"></td>
+        </tr>
+        </tbody>
+    </table>
 
-<form action="/bankingSystem" method="get">
-    <button type="submit">Back</button>
-</form>
+    <form action="/bankingSystem" method="get">
+        <button type="submit">Back</button>
+    </form>
+</div>
 
 </body>
 </html>
