--- a/BankingSystem/src/main/resources/templates/show-user-credentials.html
+++ b/BankingSystem/src/main/resources/templates/show-user-credentials.html
@@ -3,26 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <title>User Credentials</title>
+    <link href="/style.css" rel="stylesheet">
 </head>
 <body>
 
-<div class="container">
-    <h1>User Credentials</h1>
 
-    <h2>- username : <span th:text="${username}"></span></h2>
-    <h2>- token : <span th:text="${token}"></span></h2>
-    <h2>- database worker name : <span th:text="${workerName}"></span></h2>
-    <h2>(You don't need to memorize the worker name)</h2>
-
-    <br>
-    <br>
-    <br>
-
-    <h2> Note: the token will expire in one hour!</h2>
-    <!--    <form action="/" method="post">-->
-    <!--        <button type="submit">Home Page</button>-->
-    <!--    </form>-->
-    <a th:href="@{/}">Home Page</a>
+<div class="card">
+    <div class="card-body">
+        <h2 class="card-title">Credentials Information</h2>
+        <ul class="list-group list-group-flush">
+            <li class="list-group-item">
+                <span class="font-weight-bold">Username:</span> <span th:text="${username}"></span>
+            </li>
+            <li class="list-group-item">
+                <span class="font-weight-bold">Token:</span> <span th:text="${token}"></span>
+            </li>
+            <li class="list-group-item">
+                <span class="font-weight-bold">Database worker name:</span> <span th:text="${workerName}"></span>
+                (System Information)
+            </li>
+        </ul>
+        <p class="card-text text-muted">
+            Note: the token will expire in 3 hours.
+        </p>
+        <a class="btn btn-primary" th:href="@{/}">Home Page</a>
+    </div>
 </div>
 </body>
 </html>
