--- a/BankingSystem/src/main/resources/templates/admin-registration.html
+++ b/BankingSystem/src/main/resources/templates/admin-registration.html
@@ -3,19 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <title>Admin Registration</title>
+    <link href="/style.css" rel="stylesheet">
+    <style>
+        .container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 60vh;
+            width: 50vw;
+        }
+    </style>
 </head>
 <body>
+<div class="container">
+    <h1>Admin Registration</h1>
+    <form action="check-admin-credentials" method=post>
 
-<form action="check-admin-credentials" method=post>
+        <label for="username">Username</label>
+        <input id="username" name="username" required type="text">
+        <br>
+        <label for="token" style="margin-right: 2rem">Token</label>
+        <input id="token" name="token" required type="text">
+        <br>
+        <br>
+        <br>
+        <button type="submit">Register</button>
+    </form>
 
-    <label for="username">Username</label>
-    <input id="username" name="username" required type="text">
     <br>
-    <label for="token">Token</label>
-    <input id="token" name="token" required type="token">
     <br>
-    <input type="submit">
-</form>
 
+    <a th:href="@{/}">Home Page</a>
+</div>
 </body>
 </html>
