--- a/BankingSystem/src/main/resources/templates/index.html
+++ b/BankingSystem/src/main/resources/templates/index.html
@@ -2,87 +2,17 @@
 <html>
 <head>
     <title>Bank System</title>
+    <link href="/style.css" rel="stylesheet">
+
     <style>
-
         body {
-            background-color: #F7F7F7;
-            font-family: Arial, sans-serif;
-            background-image: url("/index-background.webp");
-            background-repeat: no-repeat;
-            background-size: cover;
-            background-position: center top 30%;
-        }
-
-        .container {
-            max-width: 960px;
-            margin: 0 auto;
-            padding: 20px;
-            margin-top: 25vh;
-            background-color: #FFFFFF;
-            border: 1px solid #E5E5E5;
-            box-shadow: 0px 0px 10px #E5E5E5;
-            text-align: center;
-            font-size: 16px;
-            max-height: 80vh;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-        }
-
-        h1 {
-            color: #333333;
-            font-size: 36px;
-            font-weight: bold;
-            margin-bottom: 30px;
-        }
-
-        p {
-            color: #666666;
-            font-size: 18px;
-            line-height: 1.5;
-            text-align: justify;
-        }
-
-        a {
-            color: #007BFF;
-            text-decoration: none;
-            font-weight: bold;
-        }
-
-        a:hover {
-            text-decoration: underline;
-        }
-
-        .button-container {
-            display: flex;
-            justify-content: center;
-            margin-top: 20px;
-        }
-
-        button {
-            background-color: #007BFF;
-            color: #FFFFFF;
-            padding: 10px 20px;
-            border: none;
-            border-radius: 5px;
-            font-size: 18px;
-            font-weight: bold;
-            cursor: pointer;
-            margin-right: 10px;
-        }
-
-        button:last-child {
-            margin-right: 20px;
-            margin-left: 20px;
-            font-size: large;
-        }
-
-        button:hover {
-            background-color: #0069D9;
+            background-image: url("index-background.webp");
         }
     </style>
+
 </head>
 <body>
+
 <div class="container">
     <h1>Welcome to the Bank System</h1>
 
