--- a/BankingSystem/src/main/resources/templates/remove-user-form.html
+++ b/BankingSystem/src/main/resources/templates/remove-user-form.html
@@ -3,15 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <title>Removing User Account</title>
+    <link href="/style.css" rel="stylesheet">
+    <style>
+        h1 {
+            margin-bottom: 3rem;
+        }
+
+        h2 {
+            margin-bottom: 1rem;
+        }
+
+        .container {
+            max-width: 23rem;
+            padding-left: 1rem;
+            padding-right: 1rem;
+        }
+    </style>
 </head>
 <body>
 
-<form action="removeUser" method="post">
-    <label for="token">Token:</label>
-    <input id="token" name="token" type="text" value=""/>
-    <br>
-    <input name="Remove User" type="submit" value="Remove User"/>
-</form>
+<div class="container">
+    <h1>Removing User Account</h1>
+    <form action="removeUser" method="post">
+        <label for="token">Token:</label>
+        <input id="token" name="token" type="text" value=""/>
+        <br>
+        <br>
+        <button type="submit">Remove User</button>
+    </form>
+</div>
 
 </body>
 </html>
