--- a/BankingSystem/src/main/resources/templates/show-all-users.html
+++ b/BankingSystem/src/main/resources/templates/show-all-users.html
@@ -3,27 +3,51 @@
 <head>
     <meta charset="UTF-8">
     <title>All Active Users</title>
+    <link href="/style.css" rel="stylesheet">
+    <style>
+        table {
+            border-collapse: collapse;
+            width: 100%;
+        }
+
+        th, td {
+            text-align: left;
+            padding: 8px;
+        }
+
+        th {
+            background-color: #ddd;
+            color: black;
+        }
+
+        tr:nth-child(even) {
+            background-color: #f2f2f2;
+        }
+
+        table {
+            font-size: large;
+        }
+    </style>
 </head>
 <body>
-<h1> All Active Users </h1>
-
-
-<table>
-    <thead>
-    <tr>
-        <th>Username</th>
-        <th>Worker Name</th>
-        <th>Token</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr th:each="user : ${users}">
-        <td th:text="${user.get('userName')}"></td>
-        <td th:text="${user.get('workerName')}"></td>
-        <td th:text="${user.get('token')}"></td>
-    </tr>
-    </tbody>
-</table>
-
+<div class="container">
+    <h1> All Active Users </h1>
+    <table>
+        <thead>
+        <tr>
+            <th>Username</th>
+            <th>Worker Name</th>
+            <th>Token</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="user : ${users}">
+            <td th:text="${user.get('userName')}"></td>
+            <td th:text="${user.get('workerName')}"></td>
+            <td th:text="${user.get('token')}"></td>
+        </tr>
+        </tbody>
+    </table>
+</div>
 </body>
 </html>
