--- a/BankingSystem/src/main/resources/templates/show-transactions.html
+++ b/BankingSystem/src/main/resources/templates/show-transactions.html
@@ -1,28 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Show Transactions</title>
+    <meta charset="UTF-8">
+    <title>Show Transactions</title>
+    <link href="/style.css" rel="stylesheet">
+    <style>
+        table {
+            border-collapse: collapse;
+            width: 100%;
+        }
+
+        th, td {
+            text-align: left;
+            padding: 8px;
+        }
+
+        th {
+            background-color: #ddd;
+            color: black;
+        }
+
+        tr:nth-child(even) {
+            background-color: #f2f2f2;
+        }
+
+        table {
+            font-size: large;
+        }
+    </style>
 </head>
 <body>
+<div class="container">
+    <table>
+        <thead>
+        <tr>
+            <th>Transaction</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="transaction : ${transactions}">
+            <td th:text="${transaction.get('transactionAmount')}"></td>
+        </tr>
+        </tbody>
+    </table>
 
-<table>
-  <thead>
-  <tr>
-    <th>Transaction</th>
-  </tr>
-  </thead>
-  <tbody>
-  <tr th:each="transaction : ${transactions}">
-    <td th:text="${transaction.get('transactionAmount')}"></td>
-  </tr>
-  </tbody>
-</table>
 
-
-<form action="/bankingSystem" method="get">
-  <button type="submit">Back</button>
-</form>
+    <form action="/bankingSystem" method="get">
+        <button type="submit">Back</button>
+    </form>
+</div>
 
 </body>
 </html>
